<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#1F6BB8"
        android:backgroundTint="@color/darkblue">


        <ImageButton
            android:id="@+id/backGodButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/nothing"
            app:srcCompat="@drawable/back1"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tarotStoryITxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/roman_greek_mythology"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout28"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/dionysus1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#A635475E"
                    android:padding="4dp"
                    android:text="@string/dionysus"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/hermes2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#8C4A708B"
                    android:padding="4dp"
                    android:text="@string/hermes"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/demeter3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#A635475E"
                    android:padding="4dp"
                    android:text="@string/demeter"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/zeus4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#8C4A708B"
                    android:padding="4dp"
                    android:text="@string/zeus"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cupid5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#A635475E"
                    android:padding="4dp"
                    android:text="@string/cupid"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ares6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#8C4A708B"
                    android:padding="4dp"
                    android:text="@string/ares"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cronos7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#A635475E"
                    android:padding="4dp"
                    android:text="@string/cronos"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/athena8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#8C4A708B"
                    android:padding="4dp"
                    android:text="@string/athena"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/apollo9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#A635475E"
                    android:padding="4dp"
                    android:text="@string/apollo"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/artemis10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#8C4A708B"
                    android:padding="4dp"
                    android:text="@string/artemis"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/aphrodite11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#A635475E"
                    android:padding="4dp"
                    android:text="@string/aphrodite"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/hera12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#8C4A708B"
                    android:padding="4dp"
                    android:text="@string/hera"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/hestia13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#A635475E"
                    android:padding="4dp"
                    android:text="@string/hestia"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/poseidon14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#8C4A708B"
                    android:padding="4dp"
                    android:text="@string/poseidon"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/odin15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#A635475E"
                    android:padding="4dp"
                    android:text="@string/odin"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/stvalentine16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#8C4A708B"
                    android:padding="4dp"
                    android:text="@string/stvalentine"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/hades17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#A635475E"
                    android:padding="4dp"
                    android:text="@string/hades"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/pan18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#8C4A708B"
                    android:padding="4dp"
                    android:text="@string/pan"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/nike19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#A635475E"
                    android:padding="4dp"
                    android:text="@string/nike"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/hephaestus20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#8C4A708B"
                    android:padding="4dp"
                    android:text="@string/hephaestus"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>