<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/t7"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/numQuestionTextView"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:gravity="center"
        android:text="@string/numQuestion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/questionScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/question"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/option1Button"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/option1"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/option2Button"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/option2"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/option3Button"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/option3"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/option4Button"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/option4"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#001F6BB8"
            android:backgroundTint="@color/darkblue"
            tools:ignore="UselessParent">


            <LinearLayout
                android:id="@+id/layout30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/nothing"
                    app:srcCompat="@drawable/next1"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>