<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scoreLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brownsoft"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/yourscoreis"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/yourScoreIsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/restartButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replay"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="66dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/backToMainPageButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backtomainpage"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>